2010-11-10  Andreas Kupries  <andreask@activestate.com>

	* changes:	Updates for 8.6b2 release.

2010-11-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/msgs/*.msg   Update NL catalog. For other languages,
	sorting and fix some locations of "&"

2010-11-05  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/demos/widget  Use unicode copyright sign, in stead
	* library/demos/en.msg  of depending on translation.
	* library/demos/nl.msg
	* generic/tkMain.c:    Sync TK_ASCII_MAIN usage with tclMain.c

2010-11-04  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6b2 release.

2010-11-03  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinClipboard.c: [FRQ 2965056]: Windows build with
	* win/tkWinDialog.c:     -DUNICODE
	* win/tkWinMenu.c:

2010-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkDecls.h:  [FRQ 491789]: "setargv() doesn't support a unicode
	* doc/Tk_Main.3:      cmdline" implemented for Tk on MSVC++
	* win/Makefile.in:
	* win/makefile.vc:
	* win/winMain.c:
	* win/rules.vc:       Update for VS10

2010-10-11  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkTreeview.c: Fix crash in 'tag add' / 'tag remove'
	commands when no -tags specified [Bug 3085489].

2010-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinMenu.c:    [FRQ 2965056]: Windows build with -DUNICODE
	* win/tkWinWm.c:
	* win/tcl.m4          Add netapi32 to the link line, so we no longer
	* win/makefile.vc     have to use LoadLibrary to access those functions.
	* win/configure

2010-10-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinClipboard.c: [FRQ 2965056]: Windows build with
	* win/tkWinColor.c:     -DUNICODE
	* win/tkWinCursor.c:
	* win/tkWinFont.c:
	* win/tkWinTest.c:
	* win/tkWinMenu.c:
	* win/tkWinPixmap.c:
	* win/tkWinX.c:         Eliminate isWinNT variable
	* win/Makefile.in (genstubs): Generate ttk files as well.

2010-10-06  Donal K. Fellows  <dkf@users.sf.net>

	* win/Makefile.in (genstubs): [Tcl Bug 3082049]: Typo.
